<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/xml_tablelayout_bg"
        android:orientation="vertical" >

        <Button
            android:id="@+id/game_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableLeft="@drawable/settings"
            android:drawablePadding="10dp"
            android:text="@string/jap_game_settings"
            android:textSize="14sp" />

        <Button
            android:id="@+id/game_counting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableLeft="@drawable/counting"
            android:drawablePadding="10dp"
            android:text="@string/jap_counting"
            android:textSize="14sp" />

        <Button
            android:id="@+id/game_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableLeft="@drawable/score_registration"
            android:drawablePadding="10dp"
            android:text="@string/jap_score_registration"
            android:textSize="14sp" />

        <Button
            android:id="@+id/game_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableLeft="@drawable/history"
            android:drawablePadding="10dp"
            android:text="@string/jap_history"
            android:textSize="14sp" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/jap_logout"
            android:textColor="#000" />

    </LinearLayout>



</LinearLayout>