<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/xml_tablelayout_bg"
        android:orientation="vertical" >

        <Button
            android:id="@+id/party_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableLeft="@drawable/party_play_scoring"
            android:drawablePadding="10dp"
            android:text="@string/jap_party_play_scoring"
            android:textSize="14sp" />

        <Button
            android:id="@+id/closed_competition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableLeft="@drawable/closed_competition_scoring"
            android:drawablePadding="10dp"
            android:text="@string/jap_closed_competition_scoring"
            android:textSize="14sp" />

        <Button
             android:id="@+id/open_competition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableLeft="@drawable/open_competition_scoring"
            android:drawablePadding="10dp"
            android:text="@string/jap_open_competition_scoring"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignTop="@+id/relativeLayout1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-10dp"
        android:background="#fff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/jap_score_registration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>